force-app/main/default/objects/SAP_Interfaced_Data__c/SAP_Interfaced_Data__c.object-meta.xml
<CustomObject>
    <label>SAP Interfaced Data</label>
    <nameField>
        <displayFormat>SAPID-{0}</displayFormat>
        <label>SAP Interfaced Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Interfaced Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>