force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Authorised_By__c.field-meta.xml
<CustomField>
    <fullName>Authorised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAP_Interfaced_Data</relationshipName>
    <type>Lookup</type>
</CustomField>