force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Authorised_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorised_By_Name__c</fullName>
    <formula>Authorised_By__r.FirstName + &#39; &#39; + Authorised_By__r.LastName</formula>
    <label>Authorised By Name</label>
    <type>Text</type>
</CustomField>