force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Authorised_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Date__c</fullName>
    <label>Authorised Date</label>
    <type>Date</type>
</CustomField>