force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Boomi_Processed__c.field-meta.xml
<CustomField>
    <fullName>Boomi_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boomi Processed</label>
    <type>Checkbox</type>
</CustomField>