force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Brand_Manager_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Brand_Manager_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Manager Emailed</label>
    <type>Checkbox</type>
</CustomField>