force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Business_City__c.field-meta.xml
<CustomField>
    <fullName>Business_City__c</fullName>
    <label>Business City</label>
    <type>TextArea</type>
</CustomField>