force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Business_Country__c.field-meta.xml
<CustomField>
    <fullName>Business_Country__c</fullName>
    <label>Business Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>