force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Business_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Business_Postcode__c</fullName>
    <label>Business Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>