force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Business_State__c.field-meta.xml
<CustomField>
    <fullName>Business_State__c</fullName>
    <label>Business State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>