force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account events</fullName>
            </value>
            <value>
                <fullName>Activities to consumers</fullName>
            </value>
            <value>
                <fullName>AU1-Samples for Marketing Related Activities</fullName>
            </value>
            <value>
                <fullName>AU2-Samples for Sales Related Activities</fullName>
            </value>
            <value>
                <fullName>AU3-Duty Free Samples</fullName>
            </value>
            <value>
                <fullName>AU4-Discount Sample Orders</fullName>
            </value>
            <value>
                <fullName>AU5-Samples for Admin Activities</fullName>
            </value>
            <value>
                <fullName>AU6-Ecomm Sample Orders</fullName>
            </value>
            <value>
                <fullName>Discount Sample Orders</fullName>
                <isActive>false</isActive>
                <label>Discount Sample Orders</label>
            </value>
            <value>
                <fullName>Duty Free Samples</fullName>
                <isActive>false</isActive>
                <label>Duty Free Samples</label>
            </value>
            <value>
                <fullName>EFG</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Exhibits</fullName>
            </value>
            <value>
                <fullName>External Relationship</fullName>
            </value>
            <value>
                <fullName>Internal Activity</fullName>
            </value>
            <value>
                <fullName>Marketing Activity</fullName>
            </value>
            <value>
                <fullName>PR Activity</fullName>
                <isActive>false</isActive>
                <label>PR Activity</label>
            </value>
            <value>
                <fullName>Product Promotion</fullName>
                <isActive>false</isActive>
                <label>Product Promotion</label>
            </value>
            <value>
                <fullName>Sample - Ad</fullName>
            </value>
            <value>
                <fullName>Sample - Display at account</fullName>
            </value>
            <value>
                <fullName>Sample - Inspection</fullName>
            </value>
            <value>
                <fullName>Sample - Research</fullName>
            </value>
            <value>
                <fullName>Samples for Admin Activities</fullName>
                <isActive>false</isActive>
                <label>Samples for Admin Activities</label>
            </value>
            <value>
                <fullName>Samples for Marketing Related Activities</fullName>
                <isActive>false</isActive>
                <label>Samples for Marketing Related Activities</label>
            </value>
            <value>
                <fullName>Samples for Sales Related Activities</fullName>
                <isActive>false</isActive>
                <label>Samples for Sales Related Activities</label>
            </value>
            <value>
                <fullName>SD0 - Sample Orders for Customers (Branded promotional materials &amp; displays)</fullName>
            </value>
            <value>
                <fullName>SD0-Samples for Customers</fullName>
                <isActive>false</isActive>
                <label>SD0-Samples for Customers</label>
            </value>
            <value>
                <fullName>SD0 - Tasting and sampling events whether at customer’s location or general location</fullName>
            </value>
            <value>
                <fullName>SD5-Samples</fullName>
                <isActive>false</isActive>
                <label>SD5-Samples</label>
            </value>
            <value>
                <fullName>SD5 - Samples for office display, business meeting consumption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>