force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3419830 - BBI</fullName>
            </value>
            <value>
                <fullName>3419842 - Customer Marketing</fullName>
            </value>
            <value>
                <fullName>3419825 - Marketing Director</fullName>
            </value>
            <value>
                <fullName>3419826 - Marketing Jack Daniel&apos;s</fullName>
            </value>
            <value>
                <fullName>3419827 - Marketing Super Premium Brands</fullName>
            </value>
            <value>
                <fullName>3419840 - Off-trade</fullName>
            </value>
            <value>
                <fullName>3419838 - On Trade - Advocacy</fullName>
            </value>
            <value>
                <fullName>3419839 - On Trade - Field Sales</fullName>
            </value>
            <value>
                <fullName>3419836 - On Trade - MOTR</fullName>
            </value>
            <value>
                <fullName>3419837 - On Trade - RTM</fullName>
            </value>
            <value>
                <fullName>3419848 - Admin</fullName>
            </value>
            <value>
                <fullName>3419841 - Sales Operations</fullName>
            </value>
            <value>
                <fullName>2969712 - Sales</fullName>
            </value>
            <value>
                <fullName>2969713 - Marketing</fullName>
            </value>
            <value>
                <fullName>2964000 - Finance</fullName>
            </value>
            <value>
                <fullName>2969715 - GM</fullName>
            </value>
            <value>
                <fullName>2928103 - Marketing</fullName>
            </value>
            <value>
                <fullName>2928108 - Finance</fullName>
            </value>
            <value>
                <fullName>2928109 - SupplyChain</fullName>
            </value>
            <value>
                <fullName>2928110 - Sales</fullName>
            </value>
            <value>
                <fullName>2928111 - HR</fullName>
            </value>
            <value>
                <fullName>2928112 - GM</fullName>
            </value>
            <value>
                <fullName>4351000 - CENTRAL FUNDS GERENTE GENERAL</fullName>
            </value>
            <value>
                <fullName>4352000 - FINANZAS FINANZAS</fullName>
            </value>
            <value>
                <fullName>4353000 - TMF VENTAS</fullName>
            </value>
            <value>
                <fullName>4353101 - TMF MAYORIASTAS CD MEX</fullName>
            </value>
            <value>
                <fullName>4353102 - TMF MAYORISTAS GDL</fullName>
            </value>
            <value>
                <fullName>4353200 - TMF DUERO</fullName>
            </value>
            <value>
                <fullName>4353300 - CENTROS DE CONSUMO CENTRO DE CONSUMO</fullName>
            </value>
            <value>
                <fullName>4353400 - FIELD SALES OP AUTOSERVICIOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>