force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Finance_Authorised_By__c.field-meta.xml
<CustomField>
    <fullName>Finance_Authorised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Authorised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAP_Interfaced_Data_FinanceAuthorised</relationshipName>
    <type>Lookup</type>
</CustomField>