force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Finance_Authorised_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Authorised_Date__c</fullName>
    <label>Finance Authorised Date</label>
    <type>Date</type>
</CustomField>