force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Is_International_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_International_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is International Order</label>
    <type>Checkbox</type>
</CustomField>