force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>SAP Interfaced Data</relationshipLabel>
    <relationshipName>SAP_Interfaced_Data</relationshipName>
    <type>Lookup</type>
</CustomField>