force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Items__c</fullName>
    <label># of Items</label>
    <summaryForeignKey>SAP_Interfaced_Data_Item__c.SAP_Interfaced_Data__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>