force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>CreatedBy.FederationIdentifier + &#39;-&#39; + TEXT(YEAR(Requested_Delivery_Date__c)) + RIGHT(&#39;00&#39;+TEXT(MONTH(Requested_Delivery_Date__c)),2) + RIGHT(&#39;00&#39;+TEXT(DAY(Requested_Delivery_Date__c)),2) + RIGHT(&#39;00&#39;+TEXT(HOUR(TIMEVALUE(CreatedDate))),2) + RIGHT(&#39;00&#39;+TEXT(MINUTE(TIMEVALUE(CreatedDate))),2)</formula>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>