force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>