force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sampling stock with customers at a venue or sending to customers</fullName>
            </value>
            <value>
                <fullName>NPD launch</fullName>
            </value>
            <value>
                <fullName>Promotional event or function</fullName>
            </value>
            <value>
                <fullName>Photoshoots</fullName>
            </value>
            <value>
                <fullName>Marketing Agencies</fullName>
            </value>
            <value>
                <fullName>Tastings</fullName>
            </value>
            <value>
                <fullName>Welcome basket</fullName>
            </value>
            <value>
                <fullName>Raise the bar</fullName>
            </value>
            <value>
                <fullName>Gifting external (e.g., Christmas)</fullName>
            </value>
            <value>
                <fullName>Employee engagement</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Donations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>