force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <defaultValue>TODAY() + 1</defaultValue>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>