force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group__c</fullName>
    <formula>CreatedBy.Sales_Group__c</formula>
    <label>Sales Group</label>
    <type>Text</type>
</CustomField>