force-app/main/default/objects/SAP_Interfaced_Data__c/fields/SAP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Number__c</fullName>
    <label>SAP Order Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>