force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <formula>CASE(TEXT( Business_State__c ),&#39;NSW&#39;, Market__r.Sample_Order_NSW_ShipTo__c, &#39;QLD&#39;,  Market__r.Sample_Order_QLD_ShipTo__c,&#39;VIC&#39;,Market__r.Sample_Order_VIC_ShipTo__c, &#39;SA&#39;, Market__r.Sample_Order_SA_ShipTo__c, &#39;WA&#39;,Market__r.Sample_Order_WA_ShipTo__c, &#39;ACT&#39;,Market__r.Sample_Order_ACT_ShipTo__c, &#39;NT&#39;,Market__r.Sample_Order_NT_ShipTo__c, &#39;0&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To</label>
    <type>Text</type>
</CustomField>