force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <formula>CASE(TEXT(Classification__c), &#39;AU1-Samples for Marketing Related Activities&#39;, Market__r.Sample_Order_Marketing_Sold_To__c, &#39;AU2-Samples for Sales Related Activities&#39;, Market__r.Sample_Order_Sales_Sold_To__c, &#39;AU5-Samples for Admin Activities&#39;, Market__r.Sample_Order_Admin_Sold_To__c, &#39;AU4-Discount Sample Orders&#39;, Market__r.Sample_Order_Discount_Sold_To__c, &#39;AU3-Duty Free Samples&#39;, Market__r.Sample_Order_Duty_Free_Sold_To__c, &#39;&#39;)</formula>
    <label>Sold To</label>
    <type>Text</type>
</CustomField>