force-app/main/default/objects/SAP_Interfaced_Data__c/fields/Sticker_Type__c.field-meta.xml
<CustomField>
    <fullName>Sticker_Type__c</fullName>
    <label>Sticker Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Classification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Sticker</fullName>
            </value>
            <value>
                <fullName>Sample Sticker</fullName>
            </value>
            <value>
                <fullName>Tasting Sticker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>