force-app/main/default/objects/SAP_Interfaced_Data__c/recordTypes/Sample_Order.recordType-meta.xml
<RecordType>
    <fullName>Sample_Order</fullName>
    <active>true</active>
    <description>Sample Orders</description>
    <label>Sample Order</label>
</RecordType>