force-app/main/default/objects/SAP_Interfaced_Data__c/recordTypes/Sample_Order_JAP.recordType-meta.xml
<RecordType>
    <fullName>Sample_Order_JAP</fullName>
    <active>true</active>
    <description>Sample Orders for Japan</description>
    <label>Sample Order - JAP</label>
</RecordType>