force-app/main/default/objects/SAP_Interfaced_Data__c/recordTypes/Sample_Order_Korea.recordType-meta.xml
<RecordType>
    <fullName>Sample_Order_Korea</fullName>
    <active>true</active>
    <description>Samples Order for Korea</description>
    <label>Sample Order - Korea</label>
</RecordType>