force-app/main/default/objects/SAP_Interfaced_Data__c/recordTypes/Sample_Order_Locked.recordType-meta.xml
<RecordType>
    <fullName>Sample_Order_Locked</fullName>
    <active>true</active>
    <label>Sample Order Locked</label>
</RecordType>