force-app/main/default/objects/SAP_Interfaced_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Classification__c</columns>
    <columns>Requested_Delivery_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Boomi_Processed__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>