force-app/main/default/objects/SAP_Interfaced_Data__c/listViews/AU_Sample_Order_Finance_Approvers_SAP_Interfaced_Data.listView-meta.xml
<ListView>
    <fullName>AU_Sample_Order_Finance_Approvers_SAP_Interfaced_Data</fullName>
    <filterScope>Queue</filterScope>
    <label>AU - Sample Order Finance Approvers</label>
    <queue>AU_Sample_Order_Finance_Approvers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>